# Image-Captioning

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  test_main.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.jsx  index.css
